==========
02/02/2008
==========

- Cadastro de CMS
- Estrutura de plugins de CMS

HORAS TRABALHADAS: 5h

==========
03/02/2008
==========

- Estrutura de plugins de CMS
- Plugin do tipo de CMS WordPress versao WordPress.com

HORAS TRABALHADAS: 5h

==========
04/02/2008
==========

- Application HTTP Client
- Plugin do tipo de CMS WordPress versao WordPress.com

HORAS TRABALHADAS: 7h

==========
05/02/2008
==========

- Testes com python para plugins de tipo de CMS

HORAS TRABALHADAS: 2h

==========
05/02/2008
==========

- Criação de plugin de tipo de CMS utilizando python

HORAS TRABALHADAS: 4h

==========
08/02/2008
==========

- Inclusao de classe para gerenciamento de Exceptions

HORAS TRABALHADAS: 4h

==========
13/02/2008
==========

- Correcao de BUGS

HORAS TRABALHADAS: 2h

==========
14/02/2008
==========

- Alteracao do metodo de reconhecimento do tipo de CMS
- Criacao de tabela para reconhecimento da página de autenticação

HORAS TRABALHADAS: 3h

==========
16/02/2008
==========

- Verificacao de validade da pagina de autenticacao do CMS

HORAS TRABALHADAS: 4h

==========
17/02/2008
==========

- Implementacao de novo algoritmo para deteccao de tipo de CMS e validacao da
pagina de autenticacao do CMS

HORAS TRABALHADAS: 4h

==========
18/02/2008
==========

- Implementacao de novo algoritmo para deteccao de tipo de CMS e validacao da
pagina de autenticacao do CMS

HORAS TRABALHADAS: 7h