@@ -1,0 +1,18 @@
+#input_url_ro
+{
+    float: left;
+    font-size: x-large;
+    margin-right: 10px;
+}
+
+#input_cms_type_ro
+{
+    float: left;
+    font-size: large;
+}
+
+#input_manager_url_ro
+{
+    float: left;
+    font-size: medium;
+}
