@@ -91,3 +91,12 @@ HORAS TRABALHADAS: 4h
 pagina de autenticacao do CMS
 
 HORAS TRABALHADAS: 7h
+
+==========
+19/02/2008
+==========
+
+- Ajustes no VIEW do cadastro de CMS
+- Modificacao do cadastro de usuario, cadastrar/verificar e-mail em LOWERCASE
+
+HORAS TRABALHADAS: 4h
